<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boxes</string>
    <string name="action_settings">Settings</string>
    <string name="title_start">Start</string>
    <string name="title_high_score">Statistics</string>
    <string name="title_about">About</string>
    <string name="title_shop">Shop</string>
    <string name="title_exit">Exit</string>
    <string name="title_screen_text">Boxes</string>
    <string name="title_settings">Settings</string>
    <string name="settings_text">Settings</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_clear">Reset Statistics</string>
    <string name="settings_back">Back</string>
    <string name="difficulty_easy">Casual</string>
    <string name="difficulty_medium">Mediocre</string>
    <string name="difficulty_hard">Extreme</string>
    <string name="difficulty_back">Back</string>
    <string name="difficulty_screen_text">Choose Difficulty</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="about_text">This application was developed over the course of 4 days, on UNF\&apos;s 2013 Software Development Camp.\nThe developers had little to no experience with programming.\n\nDevelopers:\nMartin Sohn\nMathias Corlin\nJonas Bødker\nNichlas Lisby</string>

</resources>